--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header class="intro__header header">
    <div class="header__logo logo">
       <div class="logo__icon">
-         <picture><source srcset="../img/logo-icon.webp" type="image/webp"><img src="../img/logo-icon.png" alt="logo-icon"></picture>
+         <picture><source srcset="img/logo-icon.webp" type="image/webp"><img src="img/logo-icon.png" alt="logo-icon"></picture>
       </div>
 
       <a class="logo__text" href="#">
