--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
          <div class="intro__bottom slide-bottom">
 
             <div class="intro__social">
-               <a class="intro__social-item">
+               <a class="intro__social-item" href="https://www.facebook.com/">
                   <svg class="facebook">
                      <use xlink:href="#facebook"></use>
                   </svg>
                </a>
-               <a class="intro__social-item" href="#">
+               <a class="intro__social-item" href="https://www.youtube.com/">
                   <svg class="youtube">
                      <use xlink:href="#youtube"></use>
                   </svg>
                </a>
-               <a class="intro__social-item" href="#">
+               <a class="intro__social-item" href="https://www.instagram.com/">
                   <svg class="instagram">
                      <use xlink:href="#instagram"></use>
                   </svg>
@@ -761,17 +761,17 @@
                         <div class="contacts-small__bottom intro__bottom slide-bottom">
 
                            <div class="intro__social">
-                              <a class="intro__social-item">
+                              <a class="intro__social-item" href="https://www.facebook.com/">
                                  <svg class="facebook">
                                     <use xlink:href="#facebook"></use>
                                  </svg>
                               </a>
-                              <a class="intro__social-item" href="#">
+                              <a class="intro__social-item" href="https://www.youtube.com/">
                                  <svg class="youtube">
                                     <use xlink:href="#youtube"></use>
                                  </svg>
                               </a>
-                              <a class="intro__social-item" href="#">
+                              <a class="intro__social-item" href="https://www.instagram.com/">
                                  <svg class="instagram">
                                     <use xlink:href="#instagram"></use>
                                  </svg>
@@ -803,19 +803,6 @@
 
             </div>
 
-            <!-- <div class="contacts-small__buttons">
-               <button class="contacts-small__prev">
-                  <svg class="contacts-small__arrow-left">
-                     <use xlink:href="#arrow-left"></use>
-                  </svg>
-               </button>
-
-               <button class="contacts-small__next">
-                  <svg class="contacts-small__arrow-right">
-                     <use xlink:href="#arrow-right"></use>
-                  </svg>
-               </button>
-            </div> -->
          </div>
 
 
